<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/fondo"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.22"
        android:gravity="start" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:id="@+id/txtCatRowNuevoPedido"
            android:textColor="@color/azul" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.22"
        android:id="@+id/linearLayout42"
        android:gravity="start" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/txtEspRowNuevoPedido"
            android:textColor="@color/azul"
            android:text="@string/idProducto" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.28"
        android:gravity="start">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:id="@+id/txtPrecioRowNuevoPedido"
            android:textColor="@color/azul" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.28"
        android:gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:id="@+id/txtKgRowNuevoPedido"
            android:textColor="@color/azul"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>