<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:padding="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.17"
            android:gravity="center_vertical|left" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCatRowDetallePedido"
                android:textColor="@color/azul"
                android:text="@string/categoria" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.19"
            android:id="@+id/linearLayout23"
            android:gravity="center_vertical|left" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/txtEspRowDetallePedido"
                android:textColor="@color/azul"
                android:text="@string/idProducto"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.22"
            android:id="@+id/linearLayout24"
            android:gravity="center_vertical|start" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPvpRowDetallePedido"
                android:textColor="@color/azul"
                android:text="@string/precio"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.22"
            android:id="@+id/layoutKg"
            android:gravity="center|start">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtKgRowDetallePedido"
                android:textColor="@color/azul"
                android:text="@string/kg"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/layoutDeleteRowDetallePedido"
            android:gravity="end">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ImgDeleteRowDetallePedido"
                android:src="@drawable/minus_azul" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>