<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.frios.pedidos.AltaUsuario">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/naranja"
        android:id="@+id/linearLayout21"
        android:weightSum="2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:onClick="back">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageView35"
                android:src="@drawable/back"
                android:scaleType="fitCenter"
                android:padding="7dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="7dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/imageView36"
                android:src="@drawable/done"
                android:padding="-7dp"
                android:onClick="altaUsuario" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout21"
        android:layout_centerHorizontal="true"
        android:background="@color/azul"
        android:id="@+id/linearLayout22"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout22">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginBottom="5dp"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laParada"
                android:id="@+id/txtEAltaUsuario"
                android:textColor="@color/azul"
                android:textSize="22sp"
                android:password="false"
                android:backgroundTint="@color/azul" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginBottom="10dp"
            android:gravity="left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigoCorrecto"
                android:id="@+id/txtCodCorrectoAltaUsuario"
                android:textColor="@color/azul"
                android:textSize="16sp"
                android:password="false"
                android:backgroundTint="@color/azul"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altaUsuarioE"
                android:id="@+id/txtLoadingAltaUsuario"
                android:textColor="@color/azul"
                android:textSize="16sp"
                android:password="false"
                android:backgroundTint="@color/azul" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="12dp"
            android:background="@drawable/solobordelayout"
            android:layout_marginBottom="10dp" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left"
                android:layout_marginBottom="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altaUsuario"
                    android:id="@+id/txtAltaUsuarioAltaUsuario"
                    android:textColor="@color/azul"
                    android:textSize="15sp"
                    android:password="false"
                    android:backgroundTint="@color/azul" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left"
                android:layout_marginBottom="10dp" >

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editNombreAltaUsuario"
                    android:textColor="@color/azul"
                    android:backgroundTint="@color/azul"
                    android:hint="@string/nombre" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left"
                android:layout_marginBottom="10dp" >

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editApellidosAltaUsuario"
                    android:textColor="@color/azul"
                    android:backgroundTint="@color/azul"
                    android:hint="@string/apellidos" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left"
                android:layout_marginBottom="10dp" >

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editCorreoAltaUsuario"
                    android:textColor="@color/azul"
                    android:backgroundTint="@color/azul"
                    android:hint="@string/correo"
                    android:password="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left"
                android:layout_marginBottom="10dp" >

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editPassAltaUsuario"
                    android:textColor="@color/azul"
                    android:backgroundTint="@color/azul"
                    android:hint="@string/pass"
                    android:password="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left"
                android:layout_marginBottom="10dp" >

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editRPassAltaUsuario"
                    android:textColor="@color/azul"
                    android:backgroundTint="@color/azul"
                    android:hint="@string/repeatPass"
                    android:password="true" />
            </LinearLayout>

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarAltaUsuario"
                android:indeterminate="false"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
