<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".MainActivity"
    android:background="@color/fondo">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@color/naranja"
        android:id="@+id/linearLayout"
        android:weightSum="2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/laySelectorEMain"
            android:onClick="irSelectorE">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/back"
                android:scaleType="fitCenter"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectorE"
                android:id="@+id/textView"
                android:textColor="@color/azul"
                android:textSize="17sp"
                android:paddingTop="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/layLogoEMain"
            android:onClick="irUpdateE"
            android:gravity="end"
            android:layout_gravity="right"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView61"
                android:src="@drawable/logo_azul"
                android:layout_marginLeft="85dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout"
        android:background="@color/azul"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:padding="30dp"
        android:gravity="center_vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevoPedido"
            android:id="@+id/btnNuevoPedidoMain"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/botones"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="irNuevoPedido" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listarPedidos"
            android:id="@+id/btnListarPedidosMain"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/botones"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="irListarPedidos" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existencias"
            android:id="@+id/btnExistenciasMain"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/botones"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="irExistencias" />

    </LinearLayout>

</RelativeLayout>
